# llm_forge

./: .gitignore  LICENSE  README.md  configs.yaml  data.py  generate_text.py  models.py  pyproject.toml  requirements.txt  train.py
configs/: gpt2.yaml
docs/: CONTRIBUTING.md  generate_cli.md  gpt2_logs.md  setup.md  train_cli.md
src/llm_forge/: generate_text.py  train.py
src/llm_forge/data/: __init__.py  dataset.py
src/llm_forge/models/: factory.py  gpt.py
src/llm_forge/utils/: config.py
tests/: test_data.py  test_generate_text.py  test_models.py  test_train.py
